PUBDEV-5820: all jetty code including proxy is now moved to h2o-jetty-9; dependency deferred to runtime via ServiceLoader